# agent-boilerplate

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.yaml
prompts/agent_one/: followup.txt  prompt.txt  summary.txt
src/: agent.py  client_factory.py  config.py  logging_config.py  main.py  prompts.py  schemas.py
src/agent_one/: __init__.py  agent.py  criteria_agents.py  criteria_runner.py  criteria_services.py  router.py  runner.py
